# motorino

./: Cargo.toml  README.md  build.rs  imgui.ini  main.rs
models/: tree1.mtl  tree2.mtl
motorino/: components.rs  debugui.rs  environment.rs  mod.rs  models.rs  player.rs  renderers.rs  ringbuffer.rs
res/models/: Low-Poly-Racing-Car.mtl  cube.mtl  lego-man.mtl  legoman2.mtl  pine-tree.mtl  robot.mtl  tree1b.mtl  tree2b.mtl  tree3.mtl  tree3b.mtl
res/shaders/: default.frag  default.vert  skybox.frag  skybox.vert  terrain.frag
shaders/: simple_texture.frag  simple_texture.vert  terrain.frag  terrain.vert
src/motorino/: camera.rs  components.rs  debugui.rs  display.rs  environment.rs  input.rs  macros.rs  mod.rs  models.rs  renderers.rs  resources.rs  shaders.rs  skybox.rs  terrain.rs
